--- a/Roshambo/Base.lproj/Main.storyboard
+++ b/Roshambo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jBZ-iL-KKa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -37,9 +37,23 @@
                                 <accessibility key="accessibilityConfiguration" hint="Scissors"/>
                                 <state key="normal" image="scissors"/>
                                 <connections>
-                                    <segue destination="YKT-h7-TFB" kind="presentation" identifier="play" id="4Aa-YD-v4i"/>
+                                    <action selector="makeYourMove:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Voh-oF-Pph"/>
                                 </connections>
                             </button>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="czN-7J-eyz">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="QOk-A9-9Bg"/>
+                                    <barButtonItem title="Game" image="gamecontroller.fill" catalog="system" id="gWI-ZR-Hw8"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="xQ8-ic-Uu8"/>
+                                    <barButtonItem title="History" image="clock.fill" catalog="system" id="P5D-L8-PbN">
+                                        <connections>
+                                            <action selector="showHistory:" destination="BYZ-38-t0r" id="RiI-4y-DMJ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="XSx-X9-tUs"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -47,8 +61,11 @@
                             <constraint firstItem="mOG-lu-NCj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jn3-38-K2R"/>
                             <constraint firstItem="zyl-64-oBu" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="KDr-00-biw"/>
                             <constraint firstItem="NOB-C5-J1K" firstAttribute="leading" secondItem="mOG-lu-NCj" secondAttribute="trailing" constant="16" id="PCx-js-CMM"/>
+                            <constraint firstItem="czN-7J-eyz" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="QXe-ti-m5W"/>
+                            <constraint firstItem="czN-7J-eyz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bTI-R5-ahc"/>
                             <constraint firstItem="mOG-lu-NCj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="d2G-ty-vSw"/>
                             <constraint firstItem="NOB-C5-J1K" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="jYO-cE-ysy"/>
+                            <constraint firstItem="czN-7J-eyz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="seR-6l-Ggv"/>
                             <constraint firstItem="mOG-lu-NCj" firstAttribute="leading" secondItem="zyl-64-oBu" secondAttribute="trailing" constant="16" id="t1R-hQ-maw"/>
                         </constraints>
                     </view>
@@ -57,6 +74,7 @@
                         <outlet property="paperButton" destination="mOG-lu-NCj" id="PRo-lc-Ydh"/>
                         <outlet property="rockButton" destination="zyl-64-oBu" id="Pgb-5E-HLa"/>
                         <outlet property="scissorsButton" destination="NOB-C5-J1K" id="Z9B-sW-Bgs"/>
+                        <segue destination="YKT-h7-TFB" kind="presentation" identifier="play" id="AHG-aY-Cip"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -113,38 +131,29 @@
             </objects>
             <point key="canvasLocation" x="2597" y="-300"/>
         </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="vvf-Vd-gt6">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="jBZ-iL-KKa" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9My-9O-CdR">
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="selectedImageTintColor" systemColor="systemOrangeColor"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="geN-hJ-6m1" kind="relationship" relationship="viewControllers" id="UpP-rU-1qG"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="zJP-X9-KaV"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="D1N-Uf-Pk5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="552" y="122"/>
-        </scene>
         <!--History View Controller-->
         <scene sceneID="Fcv-g0-ccI">
             <objects>
-                <viewController title="History View Controller" id="geN-hJ-6m1" customClass="HistoryViewController" customModule="Roshambo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HistoryViewController" title="History View Controller" id="geN-hJ-6m1" customClass="HistoryViewController" customModule="Roshambo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aTw-JW-MmS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aPc-8A-UBe">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <barButtonItem title="OK" id="nT1-Nb-pj0">
+                                        <connections>
+                                            <action selector="dismissHistory:" destination="geN-hJ-6m1" id="vGQ-U9-foA"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pWc-9N-Xir">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="Z5U-pw-7nB" detailTextLabel="ewf-LP-O7Q" style="IBUITableViewCellStyleSubtitle" id="Lbf-xI-Gcj">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellMatch" textLabel="Z5U-pw-7nB" detailTextLabel="ewf-LP-O7Q" style="IBUITableViewCellStyleSubtitle" id="Lbf-xI-Gcj">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lbf-xI-Gcj" id="QYV-6J-mO1">
@@ -178,18 +187,24 @@
                         <viewLayoutGuide key="safeArea" id="lHX-TS-MZU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="pWc-9N-Xir" firstAttribute="leading" secondItem="lHX-TS-MZU" secondAttribute="leading" id="ADe-WS-Hoi"/>
-                            <constraint firstItem="lHX-TS-MZU" firstAttribute="bottom" secondItem="pWc-9N-Xir" secondAttribute="bottom" id="JeP-q5-e1a"/>
-                            <constraint firstItem="lHX-TS-MZU" firstAttribute="trailing" secondItem="pWc-9N-Xir" secondAttribute="trailing" id="V4S-qD-3AZ"/>
-                            <constraint firstItem="pWc-9N-Xir" firstAttribute="top" secondItem="lHX-TS-MZU" secondAttribute="top" id="g9h-6w-nFJ"/>
+                            <constraint firstItem="pWc-9N-Xir" firstAttribute="bottom" secondItem="lHX-TS-MZU" secondAttribute="bottom" id="FS3-oF-zqi"/>
+                            <constraint firstItem="pWc-9N-Xir" firstAttribute="top" secondItem="aPc-8A-UBe" secondAttribute="bottom" id="M2j-aB-ieo"/>
+                            <constraint firstItem="aPc-8A-UBe" firstAttribute="top" secondItem="lHX-TS-MZU" secondAttribute="top" id="NlB-Mh-DEi"/>
+                            <constraint firstItem="pWc-9N-Xir" firstAttribute="trailing" secondItem="lHX-TS-MZU" secondAttribute="trailing" id="T8a-B6-7sx"/>
+                            <constraint firstItem="aPc-8A-UBe" firstAttribute="trailing" secondItem="lHX-TS-MZU" secondAttribute="trailing" id="ghN-Wg-Qce"/>
+                            <constraint firstItem="pWc-9N-Xir" firstAttribute="leading" secondItem="lHX-TS-MZU" secondAttribute="leading" id="ncD-bh-s8U"/>
+                            <constraint firstItem="aPc-8A-UBe" firstAttribute="leading" secondItem="lHX-TS-MZU" secondAttribute="leading" id="qGR-dn-yx5"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="History" image="clock.fill" catalog="system" id="uui-pP-UKs"/>
                     <navigationItem key="navigationItem" id="mh3-m1-rYs"/>
+                    <connections>
+                        <outlet property="tableView" destination="pWc-9N-Xir" id="wOu-5f-wdu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="81a-ev-mUR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1586" y="485"/>
+            <point key="canvasLocation" x="1585.5072463768117" y="484.82142857142856"/>
         </scene>
     </scenes>
     <resources>
@@ -201,9 +216,6 @@
         <image name="scissors" width="75" height="65"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
